--- a/html_css course/button.html
+++ b/html_css course/button.html
@@ -6,8 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    <button>hello</button>
+    <style>
+        .sub{
+            margin-right: 8px;
+
+        }
+        .join{
+            border-width: 1px;
+            background-color: white;
+            border-style:solid ;
+
+        }
+        .t{
+            background-color: rgb(0, 183, 255);
+            color: white;
+            border-color:skyblue ;
+            border-style: solid ;
+            height: 36px;
+            width: 70px;
+            border-radius: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            margin-left: 8px;
+
+        }
+    </style>
+    <!-- <button>hello</button>
     <input type="button" value="in">
     <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=435s" target="_blank">course</a>
+    <br> -->
+    <button class="sub" style="background-color: rgba(197, 33, 33, 0.942);color: whitesmoke; padding: 5px; border: nones; border-radius: 2px; cursor: pointer; " >SUBSCRIBE</button>
+    <button class="join" style="color: rgb(10, 175, 241); padding: 1%; border-color:rgb(10, 175, 241) ; "><b>JOIN</b> </button>
+    <button class="t"><b>Tweet</b></button>
+     
 </body>
 </html>
