--- a/html_css course/exercise2.html
+++ b/html_css course/exercise2.html
@@ -45,9 +45,10 @@
         background-color: rgb(10,102,194);
         color: aliceblue;
         height: 30px;
-        width: 190px;
+        width: 199px;
         border: none;
         border-radius:  95px ;
+        font-weight: bold;
     }
     .link1{
         margin-left: 10px;
