--- a/html_css course/button.html
+++ b/html_css course/button.html
@@ -22,12 +22,12 @@
             color: white;
             border-color:skyblue ;
             border-style: solid ;
-            height: 36px;
-            width: 70px;
+           padding: 10px;
             border-radius: 18px;
             font-weight: bold;
             cursor: pointer;
             margin-left: 8px;
+            vertical-align: top;
 
         }
     </style>
