--- a/html_css course/text.html
+++ b/html_css course/text.html
@@ -34,7 +34,19 @@
 
         }
         .ex1{
-
+            background: #ff4848;
+         text-align: center; 
+            color: white;
+            line-height: 40px;
+            margin-block-start: px;
+            padding-left: 20px;
+        }
+        .ex{
+            color: white;
+        }
+        .ex:hover{
+            text-decoration: underline;
+            text-decoration-color: yellow;
         }
     </style>
 </head>
@@ -48,9 +60,10 @@
     </p>
     <p class="vedioauthor"> Marques Browniee &#10003;</p>
     <p   class="desc"> Talkingtech and AI the heels of google <br> I/O also a daily driver phone reavel  </p>
-    <p class="ex1"> shop early the best selection
-         of holiday favourite <a hreaf ="https://www.google.com/"  style=" cursor: pointer;
-          " target="_blank"> singhup</a></p>
+    <p class="ex1"> shop early the <span class="ex"> selection</span>
+         of holiday favourite  <a class="ex" href="https://www.google.com/" target="_blank">sign up</a></p>
+         
+
     
 </body>
 </html>
