--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -8,18 +8,21 @@
 <link rel="stylesheet" href="header.css">
     <title>youtube.com</title>
 </head>
-<body>
-<div class="head">
+<body style="padding-top: 70px;">
+<div class="head"
+style="position: fixed;
+top: 0px;
+">
     <div class="leftsection"> 
-        <img class ="bar" src="https://cdn-icons-png.freepik.com/128/152/152523.png" alt="bar">
-        <img class="logo" src="https://cdn-icons-png.freepik.com/128/1384/1384060.png" alt="logo">
+        <img class ="bar" src="icon/bars_141930.png" alt="bar">
+        <img class="logo" src="icon/youtube_5968852.png" alt="logo">
         <p class="logotext">
         YouTube  <sup class="pow"> In</sup>
         </p>
         
     </div>
     <div class="centersection"> 
-        <input class="textbox" type="text" placeholder="Search">
+        <input class="textbox" type="text" placeholder="Search" >
         <div class="search1"><img class="search" src="https://cdn-icons-png.freepik.com/256/54/54481.png?uid=R134593510&ga=GA1.1.1747240113.1720968717&semt=ais_hybrid" alt="search"></div>
         <img class="mic" src="https://cdn-icons-png.freepik.com/128/154/154554.png" alt="mic ">
     </div>
