--- a/html_css course/position.html
+++ b/html_css course/position.html
@@ -8,9 +8,9 @@
 
 <body style="height: 1000px;
 width: 1000px;
-/* margin-top: 60px; */
-padding-top: 60px;
+margin-top: 70px;
 padding-left: 90px;
+
  ">
     <div style="background-color: black;
     color: white;
@@ -20,6 +20,7 @@ padding-left: 90px;
     bottom: 10px;
     top: 10px;
     right: 10px;
+    z-index: 2;
     "> header</div>
     <div style=" 
     display: flex;
@@ -32,7 +33,28 @@ padding-left: 90px;
      top: 70px;
      left: 10px;">
         slide bar
+        <div
+        style="background-color: red;
+        position: absolute;
+        right :10px;
+        top: 10px;"> X</div>
+
+        <div style="position:relative;
+        background-color: blue;
+        left: 60px;
+        ">
+            r
+        </div>
     </div>
+    <!-- fixed is placed in the browser window when we scroll down the page the fixed element will be in the same position -->
+     <!-- absolute placed on the page when we scroll down it move along with that -->
+    <div style="position:absolute;
+        background-color: blue;
+        color: white; 
+        right: 10px;
+        z-index: 0;">
+         absolute
+        </div>
 
     <div style="height: 200px;
     width: 200px;
@@ -43,8 +65,18 @@ padding-left: 90px;
     width: 200px;
     background-color: pink;
     margin-top: 20px;
+    position: relative;
     ">
+    <div style="position:absolute;
+    background-color :black;
+    color: white;
+    bottom: 20px;
+    right :0px;
+    ">
+        2:00
+        </div>
         div2 
     </div>
+    
 </body>
 </html>
