--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -29,7 +29,22 @@ top: 0px;
        
     <div class="rightsection"> 
         <img  class="creator" src =" https://cdn-icons-png.freepik.com/128/3394/3394494.png" alt="creator">
-        <img class ="notification" src="https://cdn-icons-png.freepik.com/256/54/54810.png?uid=R134593510&ga=GA1.1.1747240113.1720968717&semt=ais_hybrid" alt="notification">
+        <div style="position: relative;
+        ">
+            <img class ="notification" src="https://cdn-icons-png.freepik.com/256/54/54810.png?uid=R134593510&ga=GA1.1.1747240113.1720968717&semt=ais_hybrid" alt="notification">
+            <div style="background-color: red;
+            color: white;
+            width: 20px;
+            height:20px;
+            position:absolute;
+            right: 0px;
+          bottom: 20px;
+            border-radius: 10px;
+            text-align: center;
+            z-index: 0;
+            "> 3</div>
+        </div>
+       
         <img class="profile" src="https://yt3.ggpht.com/fxnQWRC5yTEV77VH2X7BDHA_O1cy9k_6KVq8OdPM2w_AHn6pz1LCsuscqlWad8obstKCBZyj08w=s88-c-k-c0x00ffffff-no-rj" alt="profile">
     </div>
  </div>
